#3 Criação da estrutura para o login conectando com o banco de dados e configurando as migrations

--- a/backend/FisioEscala/FisioEscala.API/appsettings.json
+++ b/backend/FisioEscala/FisioEscala.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FisioEscala": "Server=DESKTOP-JL92VVB;Database=FisioEscala;Integrated Security=SSPI;TrustServerCertificate=True;",
+  }
 }
